objects/Contact/fields/e_Personal_LinkedIn__c.field-meta.xml
<CustomField>
    <fullName>e_Personal_LinkedIn__c</fullName>
    <label>Personal LinkedIn</label>
    <type>Url</type>
</CustomField>