objects/Contact/fields/e_Secondary_Email__c.field-meta.xml
<CustomField>
    <fullName>e_Secondary_Email__c</fullName>
    <label>Secondary Email</label>
    <type>Email</type>
</CustomField>