objects/Contact/fields/e_Skype_Id__c.field-meta.xml
<CustomField>
    <fullName>e_Skype_Id__c</fullName>
    <label>Skype Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>