objects/Contact/fields/e_WhatsApp_Id__c.field-meta.xml
<CustomField>
    <fullName>e_WhatsApp_Id__c</fullName>
    <label>WhatsApp Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>