objects/Contact/fields/IsLeadConversion__c.field-meta.xml
<CustomField>
    <fullName>IsLeadConversion__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsLeadConversion</label>
    <type>Checkbox</type>
</CustomField>