objects/Contact/fields/primary__c.field-meta.xml
<CustomField>
    <fullName>primary__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Primary</label>
    <type>Checkbox</type>
</CustomField>