objects/Contact/fields/Roles__c.field-meta.xml
<CustomField>
    <fullName>Roles__c</fullName>
    <label>Roles</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Billing Address</fullName>
            </value>
            <value>
                <fullName>Decision Maker</fullName>
            </value>
            <value>
                <fullName>Evaluator</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
            <value>
                <fullName>Receiver</fullName>
            </value>
            <value>
                <fullName>Receiving Contact</fullName>
            </value>
            <value>
                <fullName>Shipping Address</fullName>
            </value>
            <value>
                <fullName>Technical Buyer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>