objects/Contact/fields/tdc_cti__DNC__c.field-meta.xml
<CustomField>
    <fullName>tdc_cti__DNC__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Do not Call</label>
    <type>Checkbox</type>
</CustomField>