objects/Contact/fields/tdc_tvte__did_you_mean__c.field-meta.xml
<CustomField>
    <fullName>tdc_tvte__did_you_mean__c</fullName>
    <label>Did you mean</label>
    <length>100</length>
    <type>Text</type>
</CustomField>