objects/Contact/fields/tdc_tvte__Domain__c.field-meta.xml
<CustomField>
    <fullName>tdc_tvte__Domain__c</fullName>
    <label>Domain</label>
    <length>100</length>
    <type>Text</type>
</CustomField>