objects/Contact/fields/tdc_tvte__Email_Status__c.field-meta.xml
<CustomField>
    <fullName>tdc_tvte__Email_Status__c</fullName>
    <formula>IF(tdc_tvte__success__c == true,
CASE(tdc_tvte__Result__c, &apos;deliverable&apos;, IMAGE(&apos;/resource/tdc_tvte__VTMMessage/img/Deliverable1.png&apos;, &apos;Deliverable&apos;),&apos;risky&apos;, IMAGE(&apos;/resource/tdc_tvte__VTMMessage/img/Risky.png&apos;, &apos;Risky&apos;),
&apos;undeliverable&apos;, IMAGE(&apos;/resource/tdc_tvte__VTMMessage/img/Undeliverable.png&apos;, &apos;Not Deliverable&apos;), &apos;unknown&apos;, IMAGE(&apos;/resource/tdc_tvte__VTMMessage/img/Unknown.png&apos;, &apos;Unknown&apos;), tdc_tvte__Result__c) + &apos; &apos; + BR() + tdc_tvte__did_you_mean__c
, IMAGE(&apos;/resource/tdc_tvte__VTMMessage/img/Notverified1.png&apos;, &apos;Not Verified Yet&apos;))</formula>
    <label>Email Status</label>
    <type>Text</type>
</CustomField>