objects/Contact/fields/tdc_tvte__Number__c.field-meta.xml
<CustomField>
    <fullName>tdc_tvte__Number__c</fullName>
    <label>NumberWithCode</label>
    <length>100</length>
    <type>Text</type>
</CustomField>