objects/Contact/fields/tdc_tvte__Preferred_Email__c.field-meta.xml
<CustomField>
    <fullName>tdc_tvte__Preferred_Email__c</fullName>
    <label>Preferred Email</label>
    <type>Email</type>
</CustomField>