objects/Contact/fields/tdc_tvte__success__c.field-meta.xml
<CustomField>
    <fullName>tdc_tvte__success__c</fullName>
    <defaultValue>false</defaultValue>
    <label>success</label>
    <type>Checkbox</type>
</CustomField>