objects/Contact/fields/tdc_tvte__Verified_Phone__c.field-meta.xml
<CustomField>
    <fullName>tdc_tvte__Verified_Phone__c</fullName>
    <label>Verified Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>