objects/Contact/fields/Whatsapp_no__c.field-meta.xml
<CustomField>
    <fullName>Whatsapp_no__c</fullName>
    <label>Whatsapp no.</label>
    <type>Phone</type>
</CustomField>