objects/Contact/fields/Whatsapp_no_same_as_Phone__c.field-meta.xml
<CustomField>
    <fullName>Whatsapp_no_same_as_Phone__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Whatsapp no. same as Phone</label>
    <type>Checkbox</type>
</CustomField>