objects/Contact/recordTypes/tdc_tvte__VTM_Email_RecordType.recordType-meta.xml
<RecordType>
    <fullName>tdc_tvte__VTM_Email_RecordType</fullName>
    <active>true</active>
    <label>VTM Email RecordType</label>
</RecordType>