objects/Contact/validationRules/AlternatePhoneNoValidation_Contact.validationRule-meta.xml
<ValidationRule>
    <fullName>AlternatePhoneNoValidation_Contact</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
NOT(ISBLANK( Alternate_No__c)),NOT(REGEX( Alternate_No__c, &quot;(\\d){10}&quot;) )
)</errorConditionFormula>
    <errorDisplayField>Alternate_No__c</errorDisplayField>
    <errorMessage>Please enter 10 digit Alternate Number</errorMessage>
</ValidationRule>