objects/Contact/validationRules/FaxValidation_Contact.validationRule-meta.xml
<ValidationRule>
    <fullName>FaxValidation_Contact</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
NOT(ISBLANK( Fax )),NOT(REGEX( Fax , &quot;(\\d){10}&quot;) )
)</errorConditionFormula>
    <errorDisplayField>Fax</errorDisplayField>
    <errorMessage>Please enter 10 digit Fax</errorMessage>
</ValidationRule>