objects/Contact/validationRules/PhoneNoValidation_Contact.validationRule-meta.xml
<ValidationRule>
    <fullName>PhoneNoValidation_Contact</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
NOT(ISBLANK( Phone )),NOT(REGEX( Phone , &quot;(\\d){10}&quot;) )
)</errorConditionFormula>
    <errorDisplayField>Phone</errorDisplayField>
    <errorMessage>Please enter 10 digit Phone Number</errorMessage>
</ValidationRule>