objects/Contact/validationRules/WhatappPhoneNoValidation_Contact.validationRule-meta.xml
<ValidationRule>
    <fullName>WhatappPhoneNoValidation_Contact</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
NOT(ISBLANK( Whatsapp_no__c)),NOT(REGEX( Whatsapp_no__c, &quot;(\\d){10}&quot;) )
)</errorConditionFormula>
    <errorDisplayField>Whatsapp_no__c</errorDisplayField>
    <errorMessage>Please enter 10 digit Whatsapp Number</errorMessage>
</ValidationRule>